github/ci/prow-deploy/kustom/base/manifests/local/gcsweb-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: gcsweb
  namespace: default
spec:
  tls:
  - hosts:
    - gcsweb.ci.kubevirt.io
    secretName: gcsweb-tls
  rules:
  - host: gcsweb.ci.kubevirt.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gcsweb
            port:
              number: 80
